--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
+              <a class="portfolio-link link" href="">
                 <div class="prtfl-wrapper">
                   <img
                     src="./images/row1/img.jpg"
@@ -153,7 +153,7 @@
               >
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
+              <a class="portfolio-link link" href="">
                 <div class="prtfl-wrapper">
                   <img
                     src="./images/row2/img-2.jpg"
@@ -176,7 +176,7 @@
               >
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
+              <a class="portfolio-link link" href="">
                 <div class="prtfl-wrapper">
                   <img
                     src="./images/row2/img-1.jpg"
@@ -199,7 +199,7 @@
               >
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
+              <a class="portfolio-link link" href="">
                 <div class="prtfl-wrapper">
                   <img
                     src="./images/row2/img.jpg"
@@ -222,7 +222,7 @@
               >
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
+              <a class="portfolio-link link" href="">
                 <div class="prtfl-wrapper">
                   <img
                     src="./images/row3/img-2.jpg"
@@ -245,7 +245,7 @@
               >
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
+              <a class="portfolio-link link" href="">
                 <div class="prtfl-wrapper">
                   <img
                     src="./images/row3/img-1.jpg"
@@ -268,7 +268,7 @@
               >
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
+              <a class="portfolio-link link" href="">
                 <div class="prtfl-wrapper">
                   <img
                     src="./images/row3/img.jpg"
