--- a/index.html
+++ b/index.html
@@ -379,28 +379,28 @@
           <p class="social-title">Social media</p>
           <ul class="network-team ftr">
             <li class="network-item">
-              <a class="network-link" href="#">
+              <a class="network-link ftr" href="#">
                 <svg class="ftr-icon-fill" width="24" height="24">
                   <use href="./images/icons.svg#instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="network-item">
-              <a class="network-link" href="">
+              <a class="network-link ftr" href="">
                 <svg class="ftr-icon-fill" width="24" height="24">
                   <use href="./images/icons.svg#twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="network-item">
-              <a class="network-link" href="#">
+              <a class="network-link ftr" href="#">
                 <svg class="ftr-icon-fill" width="24" height="24">
                   <use
                     href="./images/icons.svg#facebook-1"
                   ></use></svg></a>
             </li>
             <li class="network-item">
-              <a class="network-link" href="#">
+              <a class="network-link ftr" href="#">
                 <svg class="ftr-icon-fill" width="24" height="24">
                   <use
                     href="./images/icons.svg#linkedin-1"
