--- a/index.html
+++ b/index.html
@@ -401,6 +401,8 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+    
+        <!-- Form -->
 
         <form class="form" name="issue_report_form" autocomplete="off">
           <span class="form-title">
@@ -413,6 +415,7 @@
               type="text"
               name="username"
               placeholder=""
+               
             />
           </label>
 
@@ -428,12 +431,7 @@
 
           <label class="form-label">
             Comment
-            <input
-              class="form-input comment"
-              type="text"
-              name="topic"
-              placeholder="Text input"
-            />
+            <textarea class="form-input" name="Comment" placeholder="Text input" rows="8"></textarea>
           </label>
 
           <p>
