--- a/index.html
+++ b/index.html
@@ -451,15 +451,15 @@
           <label class="form-label">
             <span class="modal-form-label">Comment</span>
             <textarea
-              class="modal-form-input"
+              class="modal-form-textarea"
               name="user_comment"
               placeholder="Text input"
               rows="5">
             </textarea>
           </label>
 
-          <label class="form-label">
-            <input type="checkbox" />I accept the terms and conditions of the
+          <label class="modal-form-agreement">
+            <input class="modal-form-checkbox" type="checkbox" />I accept the terms and conditions of the
             <span> <a>Privacy Policy</a></span>
           </label>
 
