--- a/index.html
+++ b/index.html
@@ -390,6 +390,21 @@
             </li>
           </ul>
         </div>
+        <div class="ftr-form-info">
+          <p class="social-title">
+            Subscribe
+          </p>
+          <form class="footer_form" name="footer_form" autocomplete="off">
+            <label class="">
+              <input class="footer_form-input" type="email" name="" placeholder="E-mail">
+            </label>
+            <button class="button-subscribe">Subscribe
+              <svg class="button-subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -459,8 +474,13 @@
           </label>
 
           <label class="modal-form-agreement">
-            <input class="modal-form-checkbox" type="checkbox" />I accept the terms and conditions of the
-            <span> <a>Privacy Policy</a></span>
+            <input class="modal-form-checkbox visually-hidden" type="checkbox" />
+            <span class="modal-form-custom-checkbox">
+              <svg class="modal-form-checkbox-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-vector"></use>
+              </svg>
+            </span>
+            <span class="modal-form-agreement-desc">I accept the terms and conditions of the<a class="modal-form-link" href="#"> Privacy Policy</a></span>
           </label>
 
           <button class="form-button" type="submit">Send</button>
