--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           </p>
           <form class="footer_form" name="footer_form" autocomplete="off">
             <label class="">
-              <input class="footer_form-input" type="email" name="" placeholder="E-mail">
+              <input class="footer_form-input" type="email" name="user_email" placeholder="E-mail" />
             </label>
             <button class="button-subscribe">Subscribe
               <svg class="button-subscribe-icon" width="24" height="24">
