--- a/portfolio.html
+++ b/portfolio.html
@@ -318,16 +318,29 @@
             <li class="network-item">
               <a class="network-link ftr" href="#">
                 <svg class="ftr-icon-fill" width="24" height="24">
-                  <use href="./images/icons.svg#facebook-1"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#facebook-1"></use></svg></a>
             </li>
             <li class="network-item">
               <a class="network-link ftr" href="#">
                 <svg class="ftr-icon-fill" width="24" height="24">
-                  <use href="./images/icons.svg#linkedin-1"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#linkedin-1"></use></svg></a>
             </li>
           </ul>
+        </div>
+        <div class="ftr-form-info">
+          <p class="social-title">
+            Subscribe
+          </p>
+          <form class="footer_form" name="footer_form" autocomplete="off">
+            <label class="footer_form-label">
+              <input class="footer_form-input" type="email" name="user_email" placeholder="E-mail" />
+            </label>
+            <button class="button-subscribe" type="submit">Subscribe
+              <svg class="button-subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
