--- a/portfolio.html
+++ b/portfolio.html
@@ -333,7 +333,7 @@
           </p>
           <form class="footer_form" name="footer_form" autocomplete="off">
             <label class="footer_form-label">
-              <input class="footer_form-input" type="email" name="user_email" placeholder="E-mail" />
+              <input class="footer_form-input" type="email" name="user-email" placeholder="E-mail" />
             </label>
             <button class="button-subscribe" type="submit">Subscribe
               <svg class="button-subscribe-icon" width="24" height="24">
