--- a/portfolio.html
+++ b/portfolio.html
@@ -328,14 +328,18 @@
           </ul>
         </div>
         <div class="ftr-form-info">
-          <p class="social-title">
-            Subscribe
-          </p>
+          <p class="social-title">Subscribe</p>
           <form class="footer_form" name="footer_form" autocomplete="off">
             <label class="footer_form-label">
-              <input class="footer_form-input" type="email" name="user-email" placeholder="E-mail" />
+              <input
+                class="footer_form-input"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+              />
             </label>
-            <button class="button-subscribe" type="submit">Subscribe
+            <button class="button-subscribe" type="submit">
+              Subscribe
               <svg class="button-subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-Frame"></use>
               </svg>
