--- a/index.html
+++ b/index.html
@@ -497,18 +497,17 @@
               type="checkbox"
               value="true"
             />
-
-            <span class="modal-form-custom-checkbox">
-              <svg class="modal-form-checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-vector"></use>
-              </svg>
-            </span>
-
             <label class="modal-form-agreement" for="user-privacy"
-              >I accept the terms and conditions of the<a
-                class="modal-form-link"
-                href="#">
-                Privacy Policy</a>
+            >
+              <span class="modal-form-custom-checkbox">
+                <svg class="modal-form-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the<a
+              class="modal-form-link"
+              href="#">
+              Privacy Policy</a>
             </label>
           </div>
 
