--- a/index.html
+++ b/index.html
@@ -475,16 +475,15 @@
           </div>
 
           <div class="div-modal-form-comment">
-            <label class="form-label" for="user-comment">Comment</label>
-
-            <textarea
+            <label class="form-label" for="user-comment">Comment</label> 
+             <textarea
               class="modal-form-textarea"
               id="user-comment"
               name="user-comment"
               placeholder="Text input"
-              rows="5"
-            >
+              rows="5">
             </textarea>
+           
           </div>
 
           <!-- checkbox -->
