--- a/index.html
+++ b/index.html
@@ -475,16 +475,13 @@
           </div>
 
           <div class="div-modal-form-comment">
-            <label class="form-label" for="user-comment">Comment</label> 
-             <textarea
-              class="modal-form-textarea"
-              id="user-comment"
-              name="user-comment"
-              placeholder="Text input"
-              rows="5">
-            </textarea>
-           
-          </div>
+          <label class="form-label" for="user-comment">Comment</label>  
+          <textarea
+                id="user-comment"
+                name="user-comment"
+                class="modal-form-textarea"
+                placeholder="Text input"></textarea>
+              </div>
 
           <!-- checkbox -->
 
