--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
-    <header class="header brd">
+    <!-- <header class="header brd">
       <div class="container-header container">
         <nav class="header nav">
           <a class="link header-logo" href="./index.html"
@@ -57,16 +57,16 @@
         </address>
       </div>
     </header>
-    <main class="main">
+    <main class="main"> -->
       <!-- section 1 -->
-      <section class="section-hero">
+      <!-- <section class="section-hero">
         <div class="hero-container container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- section 2 -->
       <section class="section benefits">
         <div class="container">
@@ -124,7 +124,7 @@
         </div>
       </section>
       <!-- section 3 -->
-      <section class="section doing">
+      <!-- <section class="section doing">
         <div class="container">
           <h2 class="section-title doing-title">What are we doing</h2>
           <ul class="section-doing list">
@@ -143,9 +143,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Team section 4  -->
-      <section class="section section-team">
+      <!-- <section class="section section-team">
         <div class="container">
           <h2 class="section-title title-team">Our Team</h2>
           <ul class="team-list list">
@@ -295,11 +295,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Customers section 5 -->
 
-      <section class="section">
+      <!-- <section class="section">
         <div class="customers-container container">
           <h2 class="customers-title section-title">Customers</h2>
           <ul class="clients-list">
@@ -348,9 +348,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="ftr-info">
           <a class="link header-logo ftr-logo" href="./index.html"
@@ -409,7 +409,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
