--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="ftr-info">
           <a class="link header-logo ftr-logo" href="./index.html"
@@ -421,7 +421,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
